--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ form {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: inline-block;
-    text-align: left;
+    text-align: center;
 }
 
 input {
@@ -33,7 +33,7 @@ input {
 }
 
 button {
-    width: 100%;
+    width: 40%;
     background: #28a745;
     color: white;
     padding: 10px;
@@ -42,6 +42,9 @@ button {
     border-radius: 5px;
     cursor: pointer;
     transition: background 0.3s;
+    margin: auto;
+    left: 0%;
+    right: 0%;
 }
 
 button:hover {
@@ -59,7 +62,7 @@ li {
     background: white;
     padding: 10px;
     margin: 5px auto;
-    max-width: 300px;
+    max-width: 20rem;
     display: flex;
     justify-content: space-between;
     border-radius: 5px;
@@ -69,6 +72,7 @@ li {
 button#reset-button {
     background: #dc3545;
     margin-top: 15px;
+    width: 25%;
 }
 
 button#reset-button:hover {
@@ -80,4 +84,11 @@ button#reset-button:hover {
     font-size: 1.2rem;
     margin-top: 20px;
     color: #333;
+}
+.item_food {
+    font-weight: bold;
+    font-size: 1.2rem;
+    margin :0.5rem auto;
+    padding: 0.5rem;
+    list-style: none;
 }
